utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_override_type_with_object_type.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "field": {
      "type": "object"
    }
  },
  "required": [
    "field"
  ],
  "type": "object"
}
