utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_unnamed_field_reference_with_comment.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "$ref": "#/components/schemas/Bar",
  "description": "Since OpenAPI 3.1 the description can be applied to Ref types"
}
