utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_collection_of_arcs.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: greeting
snapshot_kind: text
---
{
  "properties": {
    "greeting": {
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "required": [
    "greeting"
  ],
  "type": "object"
}
