utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_comments.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: account
snapshot_kind: text
---
{
  "description": "This is user account dto object\n\nDetailed documentation here.\nMore than the first line is added to the description as well.",
  "properties": {
    "foobars": {
      "description": "Foobars",
      "items": {
        "$ref": "#/components/schemas/Foobar"
      },
      "type": "array"
    },
    "id": {
      "description": "Database autogenerated id",
      "format": "int64",
      "type": "integer"
    },
    "map": {
      "additionalProperties": {
        "type": "string"
      },
      "description": "Map description",
      "propertyNames": {
        "type": "string"
      },
      "type": "object"
    },
    "role_ids": {
      "description": "Role ids",
      "items": {
        "format": "int32",
        "type": "integer"
      },
      "type": "array"
    },
    "username": {
      "description": "Users username",
      "type": "string"
    }
  },
  "required": [
    "id",
    "username",
    "role_ids",
    "foobars",
    "map"
  ],
  "type": "object"
}
