utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_examples.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: doc
snapshot_kind: text
---
{
  "examples": [
    {
      "username": "kim"
    },
    {
      "username": "jim"
    }
  ],
  "properties": {
    "username": {
      "examples": [
        "foobar",
        "barfoo"
      ],
      "type": "string"
    }
  },
  "required": [
    "username"
  ],
  "type": "object"
}
