utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_field_rename_expr.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: schema
---
{
  "properties": {
    "description": {
      "type": "string"
    },
    "id": {
      "format": "int64",
      "type": "integer"
    }
  },
  "required": [
    "id",
    "description"
  ],
  "title": "Post Title",
  "type": "object"
}
