utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_no_additional_properties.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "additionalProperties": false,
  "properties": {
    "field": {
      "type": "string"
    }
  },
  "required": [
    "field"
  ],
  "type": "object"
}
