utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_rc.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: greeting
snapshot_kind: text
---
{
  "properties": {
    "greeting": {
      "type": "string"
    }
  },
  "required": [
    "greeting"
  ],
  "type": "object"
}
