utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_read_only_and_write_only_ref.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: user
snapshot_kind: text
---
{
  "properties": {
    "address": {
      "$ref": "#/components/schemas/Inner",
      "readOnly": true
    },
    "secret": {
      "$ref": "#/components/schemas/Inner",
      "writeOnly": true
    }
  },
  "required": [
    "address",
    "secret"
  ],
  "type": "object"
}
